Kaggle Notebook | Fork of Titanic Prediction | Tom Pham | Version 3

--- a/Titanic submission prediction 20220620.ipynb
+++ b/Titanic submission prediction 20220620.ipynb
@@ -3,19 +3,19 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "453a0592",
+   "id": "c6935c5b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-06-19T23:45:09.784492Z",
-     "iopub.status.busy": "2022-06-19T23:45:09.784047Z",
-     "iopub.status.idle": "2022-06-19T23:45:11.227870Z",
-     "shell.execute_reply": "2022-06-19T23:45:11.226879Z"
+     "iopub.execute_input": "2022-06-20T00:10:50.227188Z",
+     "iopub.status.busy": "2022-06-20T00:10:50.226392Z",
+     "iopub.status.idle": "2022-06-20T00:10:51.742815Z",
+     "shell.execute_reply": "2022-06-20T00:10:51.741770Z"
     },
     "papermill": {
-     "duration": 1.457205,
-     "end_time": "2022-06-19T23:45:11.230467",
+     "duration": 1.529827,
+     "end_time": "2022-06-20T00:10:51.745480",
      "exception": false,
-     "start_time": "2022-06-19T23:45:09.773262",
+     "start_time": "2022-06-20T00:10:50.215653",
      "status": "completed"
     },
     "tags": []
@@ -34,19 +34,19 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "2b77361a",
+   "id": "e716e1ea",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-06-19T23:45:11.247690Z",
-     "iopub.status.busy": "2022-06-19T23:45:11.247263Z",
-     "iopub.status.idle": "2022-06-19T23:45:11.287646Z",
-     "shell.execute_reply": "2022-06-19T23:45:11.286987Z"
+     "iopub.execute_input": "2022-06-20T00:10:51.765249Z",
+     "iopub.status.busy": "2022-06-20T00:10:51.764746Z",
+     "iopub.status.idle": "2022-06-20T00:10:51.807084Z",
+     "shell.execute_reply": "2022-06-20T00:10:51.806439Z"
     },
     "papermill": {
-     "duration": 0.051073,
-     "end_time": "2022-06-19T23:45:11.289621",
+     "duration": 0.054599,
+     "end_time": "2022-06-20T00:10:51.809581",
      "exception": false,
-     "start_time": "2022-06-19T23:45:11.238548",
+     "start_time": "2022-06-20T00:10:51.754982",
      "status": "completed"
     },
     "tags": []
@@ -111,19 +111,19 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "27e14c48",
+   "id": "df960c38",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-06-19T23:45:11.309286Z",
-     "iopub.status.busy": "2022-06-19T23:45:11.308429Z",
-     "iopub.status.idle": "2022-06-19T23:45:11.334648Z",
-     "shell.execute_reply": "2022-06-19T23:45:11.333835Z"
+     "iopub.execute_input": "2022-06-20T00:10:51.828124Z",
+     "iopub.status.busy": "2022-06-20T00:10:51.827590Z",
+     "iopub.status.idle": "2022-06-20T00:10:51.854759Z",
+     "shell.execute_reply": "2022-06-20T00:10:51.853768Z"
     },
     "papermill": {
-     "duration": 0.03903,
-     "end_time": "2022-06-19T23:45:11.337382",
+     "duration": 0.039184,
+     "end_time": "2022-06-20T00:10:51.857335",
      "exception": false,
-     "start_time": "2022-06-19T23:45:11.298352",
+     "start_time": "2022-06-20T00:10:51.818151",
      "status": "completed"
     },
     "tags": []
@@ -267,19 +267,19 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "3821e481",
+   "id": "aeb6c4d6",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-06-19T23:45:11.358297Z",
-     "iopub.status.busy": "2022-06-19T23:45:11.358015Z",
-     "iopub.status.idle": "2022-06-19T23:45:11.384397Z",
-     "shell.execute_reply": "2022-06-19T23:45:11.383676Z"
+     "iopub.execute_input": "2022-06-20T00:10:51.877250Z",
+     "iopub.status.busy": "2022-06-20T00:10:51.876758Z",
+     "iopub.status.idle": "2022-06-20T00:10:51.924515Z",
+     "shell.execute_reply": "2022-06-20T00:10:51.923713Z"
     },
     "papermill": {
-     "duration": 0.039609,
-     "end_time": "2022-06-19T23:45:11.386641",
+     "duration": 0.060207,
+     "end_time": "2022-06-20T00:10:51.926749",
      "exception": false,
-     "start_time": "2022-06-19T23:45:11.347032",
+     "start_time": "2022-06-20T00:10:51.866542",
      "status": "completed"
     },
     "tags": []
@@ -309,59 +309,38 @@
     "my_cols = categorical_cols + numerical_cols\n",
     "X_train = X_train[my_cols].copy()\n",
     "X_valid = X_valid[my_cols].copy()\n",
-    "X_test = test_data[my_cols].copy()"
+    "X_test = test_data[my_cols].copy()\n",
+    "\n",
+    "# One-hot encode the data (to shorten the code, we use pandas)\n",
+    "X_train = pd.get_dummies(X_train)\n",
+    "X_valid = pd.get_dummies(X_valid)\n",
+    "X_test = pd.get_dummies(X_test)\n",
+    "X_train, X_valid = X_train.align(X_valid, join='left', axis=1)\n",
+    "X_train, X_test = X_train.align(X_test, join='left', axis=1)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "14739d88",
+   "id": "bb84e78e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-06-19T23:45:11.406016Z",
-     "iopub.status.busy": "2022-06-19T23:45:11.405434Z",
-     "iopub.status.idle": "2022-06-19T23:45:12.102909Z",
-     "shell.execute_reply": "2022-06-19T23:45:12.102219Z"
+     "iopub.execute_input": "2022-06-20T00:10:51.946117Z",
+     "iopub.status.busy": "2022-06-20T00:10:51.945625Z",
+     "iopub.status.idle": "2022-06-20T00:10:52.316913Z",
+     "shell.execute_reply": "2022-06-20T00:10:52.316230Z"
     },
     "papermill": {
-     "duration": 0.7098,
-     "end_time": "2022-06-19T23:45:12.105263",
+     "duration": 0.383755,
+     "end_time": "2022-06-20T00:10:52.319310",
      "exception": false,
-     "start_time": "2022-06-19T23:45:11.395463",
+     "start_time": "2022-06-20T00:10:51.935555",
      "status": "completed"
     },
     "tags": []
    },
    "outputs": [],
    "source": [
-    "# Preprocessing for numerical data\n",
-    "numerical_transformer = SimpleImputer(strategy=\"mean\")\n",
-    "\n",
-    "# Preprocessing for categorical data\n",
-    "categorical_transformer = Pipeline(steps=[\n",
-    "    (\"imputer\", SimpleImputer(strategy=\"most_frequent\")),\n",
-    "    (\"onehot\", OneHotEncoder(handle_unknown=\"ignore\"))\n",
-    "])\n",
-    "\n",
-    "# Bundle preprocessing for numerical and categorical data\n",
-    "preprocessor = ColumnTransformer(\n",
-    "    transformers=[\n",
-    "        (\"num\", numerical_transformer, numerical_cols),\n",
-    "        (\"cat\", categorical_transformer, categorical_cols)\n",
-    "    ])\n",
-    "\n",
-    "\n",
-    "# Make a copy to avoid changing original data\n",
-    "X_train_eval = X_train.copy()\n",
-    "X_valid_eval=X_valid.copy()\n",
-    "X_test_eval = X_test.copy()\n",
-    "# Bundle preprocessing only in a temp pipeline\n",
-    "eval_set_pipe = Pipeline(steps = [('preprocessor', preprocessor)])\n",
-    "# fit transform X_valid.copy()\n",
-    "X_train_eval = eval_set_pipe.fit(X_train).transform (X_train_eval)\n",
-    "X_valid_eval = eval_set_pipe.fit(X_train).transform (X_valid_eval)\n",
-    "X_test_eval = eval_set_pipe.fit(X_train).transform (X_test_eval)\n",
-    "\n",
     "# Define model\n",
     "model = XGBRegressor(n_estimators = 1000,\n",
     "                     learning_rate = 0.05,\n",
@@ -369,29 +348,29 @@
     "\n",
     "\n",
     "# Preprocessing of training data, fit model\n",
-    "model.fit(X_train_eval, y_train,\n",
-    "                eval_set=[(X_valid_eval, y_valid)],\n",
+    "model.fit(X_train, y_train,\n",
+    "                eval_set=[(X_valid, y_valid)],\n",
     "                verbose = False)\n",
     "\n",
-    "predictions = model.predict(X_test_eval)"
+    "predictions = model.predict(X_test)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "c450dcf9",
+   "id": "846ea8c0",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-06-19T23:45:12.126343Z",
-     "iopub.status.busy": "2022-06-19T23:45:12.126059Z",
-     "iopub.status.idle": "2022-06-19T23:45:12.136752Z",
-     "shell.execute_reply": "2022-06-19T23:45:12.135833Z"
+     "iopub.execute_input": "2022-06-20T00:10:52.341898Z",
+     "iopub.status.busy": "2022-06-20T00:10:52.341615Z",
+     "iopub.status.idle": "2022-06-20T00:10:52.354130Z",
+     "shell.execute_reply": "2022-06-20T00:10:52.352981Z"
     },
     "papermill": {
-     "duration": 0.023976,
-     "end_time": "2022-06-19T23:45:12.139700",
+     "duration": 0.026847,
+     "end_time": "2022-06-20T00:10:52.357185",
      "exception": false,
-     "start_time": "2022-06-19T23:45:12.115724",
+     "start_time": "2022-06-20T00:10:52.330338",
      "status": "completed"
     },
     "tags": []
@@ -432,14 +411,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 13.699851,
-   "end_time": "2022-06-19T23:45:12.871164",
+   "duration": 13.789679,
+   "end_time": "2022-06-20T00:10:53.188320",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2022-06-19T23:44:59.171313",
+   "start_time": "2022-06-20T00:10:39.398641",
    "version": "2.3.4"
   }
  },
