adjust nn parameters

--- a/Time series exercises/fastai-implementation.ipynb
+++ b/Time series exercises/fastai-implementation.ipynb
@@ -407,9 +407,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "# Load the dataloader\n",
     "from fastai.imports import *\n",
@@ -419,12 +428,43 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'to_nn' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/Users/tompham/Document Files/Programming/GitHub/Kaggle-machine-learning/Time series exercises/fastai-implementation.ipynb Cell 36\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/tompham/Document%20Files/Programming/GitHub/Kaggle-machine-learning/Time%20series%20exercises/fastai-implementation.ipynb#Y111sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m dls \u001b[39m=\u001b[39m to_nn\u001b[39m.\u001b[39mdataloaders(\u001b[39m1024\u001b[39m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'to_nn' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "dls = to_nn.dataloaders(1024)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y = to_nn.train.y\n",
+    "y.min(), y.max()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "from fastai.tabular.all import *\n",
-    "learn = tabular_learner(dls, layers=[50, 50, 10], metrics=accuracy)"
+    "learn = tabular_learner(dls, layers=[500, 200], n_out = 1, loss_func = F.mse_loss)"
    ]
   },
   {
@@ -5330,6 +5370,15 @@
    ],
    "source": [
     "learn.fit(16, lr = 0.013176)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "learn.save('nn')"
    ]
   },
   {
