--- a/Time series exercises/fastai-implementation.ipynb
+++ b/Time series exercises/fastai-implementation.ipynb
@@ -32,6 +32,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "creds = '{\"username\":\"tompham97\",\"key\":\"09f4caaf8504e69cd27368b9fb712df4\"}'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Import package for working with paths in Python\n",
     "from pathlib import Path\n",
     "\n",
@@ -51,23 +60,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "path = Path('store-sales-time-series-forecasting')"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "if not path.exists():\n",
-    "    import zipfile, kaggle\n",
-    "    kaggle.api.competition_download_cli(str(path))\n",
-    "    zipfile.ZipFile(f'{path}.zip').extractall(path)"
+    "path = Path('store-sales-time-series-forecasting')"
    ]
   },
   {
@@ -79,9 +76,42 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "holidays_events.csv   stores.csv            train.csv\n",
-      "oil.csv               test.csv              transactions.csv\n",
-      "sample_submission.csv to.pkl\n"
+      "Downloading store-sales-time-series-forecasting.zip to /notebooks/Kaggle-machine-learning/Time series exercises\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 21.4M/21.4M [00:00<00:00, 44.0MB/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "if not path.exists():\n",
+    "    import zipfile, kaggle\n",
+    "    kaggle.api.competition_download_cli(str(path))\n",
+    "    zipfile.ZipFile(f'{path}.zip').extractall(path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "holidays_events.csv  sample_submission.csv  test.csv   transactions.csv\n",
+      "oil.csv\t\t     stores.csv\t\t    train.csv\n"
      ]
     }
    ],
@@ -99,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +149,7 @@
        "Index(['date', 'store_nbr', 'family', 'sales', 'onpromotion'], dtype='object')"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -139,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,18 +187,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from fastai.tabular.all import *\n",
     "df = add_datepart(df, 'date')\n",
@@ -180,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +210,7 @@
        "''"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -233,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -269,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -310,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -325,12 +346,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Save the dataloader into a separate file\n",
-    "save_pickle(path/'dls.pkl', dls)"
+    "save_pickle('dls.pkl', dls)"
    ]
   },
   {
@@ -407,14 +428,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Load the dataloader\n",
     "from fastai.imports import *\n",
     "path = Path('store-sales-time-series-forecasting')\n",
-    "dls = load_pickle(path/'dls.pkl')"
+    "dls = load_pickle('dls.pkl')"
    ]
   },
   {
@@ -9688,7 +9709,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2"
+   "version": "3.9.13"
   },
   "vscode": {
    "interpreter": {
