--- a/2022-08-22-titanic-autoML.ipynb
+++ b/2022-08-22-titanic-autoML.ipynb
@@ -287,7 +287,161 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 49,
+   "id": "f254ff08-496f-4b38-98b2-f9d5e74a7c74",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Normalize fare and age\n",
+    "for col in ['Age', 'Fare']:\n",
+    "    X_train[col] = ((X_train[col]) - X_train[col].min()) / (X_train[col].max() - X_train[col].min())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "1a6402ac-5e92-4ce5-b9bc-678b9cd8a002",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Pclass</th>\n",
+       "      <th>Sex</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>SibSp</th>\n",
+       "      <th>Parch</th>\n",
+       "      <th>Ticket</th>\n",
+       "      <th>Fare</th>\n",
+       "      <th>Cabin</th>\n",
+       "      <th>Embarked</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>PassengerId</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>3</td>\n",
+       "      <td>male</td>\n",
+       "      <td>0.271174</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>A/5 21171</td>\n",
+       "      <td>0.014151</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>female</td>\n",
+       "      <td>0.472229</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>PC 17599</td>\n",
+       "      <td>0.139136</td>\n",
+       "      <td>C85</td>\n",
+       "      <td>C</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>female</td>\n",
+       "      <td>0.321438</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>STON/O2. 3101282</td>\n",
+       "      <td>0.015469</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>female</td>\n",
+       "      <td>0.434531</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>113803</td>\n",
+       "      <td>0.103644</td>\n",
+       "      <td>C123</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>3</td>\n",
+       "      <td>male</td>\n",
+       "      <td>0.434531</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>373450</td>\n",
+       "      <td>0.015713</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             Pclass     Sex       Age  SibSp  Parch            Ticket  \\\n",
+       "PassengerId                                                             \n",
+       "1                 3    male  0.271174      1      0         A/5 21171   \n",
+       "2                 1  female  0.472229      1      0          PC 17599   \n",
+       "3                 3  female  0.321438      0      0  STON/O2. 3101282   \n",
+       "4                 1  female  0.434531      1      0            113803   \n",
+       "5                 3    male  0.434531      0      0            373450   \n",
+       "\n",
+       "                 Fare Cabin Embarked  \n",
+       "PassengerId                           \n",
+       "1            0.014151   NaN        S  \n",
+       "2            0.139136   C85        C  \n",
+       "3            0.015469   NaN        S  \n",
+       "4            0.103644  C123        S  \n",
+       "5            0.015713   NaN        S  "
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
    "id": "8d11be50-3bc4-4094-b05f-74bab51d7111",
    "metadata": {},
    "outputs": [],
@@ -307,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 52,
    "id": "1af60bfa-ec80-4907-aa15-041a51231e23",
    "metadata": {},
    "outputs": [
@@ -325,7 +479,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ERROR] [2022-08-22 19:13:07,024:asyncio.events] \n",
+      "[ERROR] [2022-08-22 19:58:12,341:asyncio.events] \n",
       "Traceback (most recent call last):\n",
       "  File \"/root/mambaforge/lib/python3.9/site-packages/distributed/client.py\", line 1427, in _handle_report\n",
       "    msgs = await self.scheduler_comm.comm.read()\n",
@@ -360,7 +514,7 @@
        "                      time_left_for_this_task=120)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -371,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 53,
    "id": "6ac2b310-07f1-488f-bafc-b57dc7d65546",
    "metadata": {},
    "outputs": [
@@ -379,21 +533,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "          rank  ensemble_weight               type      cost   duration\n",
-      "model_id                                                               \n",
-      "7            1             0.14      liblinear_svc  0.189831   1.033139\n",
-      "4            2             0.02                lda  0.200000   1.544955\n",
-      "14           3             0.02                mlp  0.200000  14.150064\n",
-      "24           4             0.10           adaboost  0.200000   2.278077\n",
-      "39           5             0.02        extra_trees  0.200000   1.911459\n",
-      "19           6             0.30           adaboost  0.203390   3.637200\n",
-      "23           7             0.10           adaboost  0.213559   2.432235\n",
-      "33           8             0.04      liblinear_svc  0.223729   0.962806\n",
-      "37           9             0.02           adaboost  0.223729   1.276035\n",
-      "41          10             0.04           adaboost  0.230508   2.595960\n",
-      "44          11             0.02  gradient_boosting  0.233898   0.963526\n",
-      "43          12             0.04      liblinear_svc  0.335593   0.863115\n",
-      "36          13             0.14                mlp  0.369492   1.036513\n"
+      "          rank  ensemble_weight                 type      cost  duration\n",
+      "model_id                                                                \n",
+      "7            1             0.04        liblinear_svc  0.189831  1.055646\n",
+      "30           2             0.04    gradient_boosting  0.189831  2.754151\n",
+      "29           3             0.08             adaboost  0.189831  2.603024\n",
+      "23           4             0.08             adaboost  0.193220  2.308492\n",
+      "10           5             0.02          extra_trees  0.193220  3.470677\n",
+      "4            6             0.02                  lda  0.200000  1.475597\n",
+      "17           7             0.02                  mlp  0.200000  3.083011\n",
+      "24           8             0.02             adaboost  0.200000  2.308952\n",
+      "31           9             0.02        random_forest  0.203390  2.158354\n",
+      "19          10             0.22             adaboost  0.203390  2.720817\n",
+      "28          11             0.12             adaboost  0.203390  1.023780\n",
+      "35          12             0.02                  qda  0.206780  1.110172\n",
+      "3           13             0.02             adaboost  0.210169  3.642195\n",
+      "16          14             0.02                  mlp  0.210169  7.383911\n",
+      "13          15             0.02        random_forest  0.210169  3.023449\n",
+      "43          16             0.06        random_forest  0.213559  2.116152\n",
+      "12          17             0.06    gradient_boosting  0.223729  2.755663\n",
+      "34          18             0.04        liblinear_svc  0.230508  0.978102\n",
+      "44          19             0.02          gaussian_nb  0.240678  1.055840\n",
+      "15          20             0.02  k_nearest_neighbors  0.247458  1.363104\n",
+      "41          21             0.02         bernoulli_nb  0.328814  1.016528\n",
+      "26          22             0.02                  sgd  0.376271  1.678024\n"
      ]
     }
    ],
@@ -403,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 58,
    "id": "01be7264-6c4c-47cd-a06e-6a50f99014e3",
    "metadata": {},
    "outputs": [
@@ -456,11 +619,11 @@
        "      <th>892</th>\n",
        "      <td>3</td>\n",
        "      <td>male</td>\n",
-       "      <td>34.5</td>\n",
+       "      <td>0.452723</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>330911</td>\n",
-       "      <td>7.8292</td>\n",
+       "      <td>0.015282</td>\n",
        "      <td>NaN</td>\n",
        "      <td>Q</td>\n",
        "    </tr>\n",
@@ -468,11 +631,11 @@
        "      <th>893</th>\n",
        "      <td>3</td>\n",
        "      <td>female</td>\n",
-       "      <td>47.0</td>\n",
+       "      <td>0.617566</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>363272</td>\n",
-       "      <td>7.0000</td>\n",
+       "      <td>0.013663</td>\n",
        "      <td>NaN</td>\n",
        "      <td>S</td>\n",
        "    </tr>\n",
@@ -480,11 +643,11 @@
        "      <th>894</th>\n",
        "      <td>2</td>\n",
        "      <td>male</td>\n",
-       "      <td>62.0</td>\n",
+       "      <td>0.815377</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>240276</td>\n",
-       "      <td>9.6875</td>\n",
+       "      <td>0.018909</td>\n",
        "      <td>NaN</td>\n",
        "      <td>Q</td>\n",
        "    </tr>\n",
@@ -492,11 +655,11 @@
        "      <th>895</th>\n",
        "      <td>3</td>\n",
        "      <td>male</td>\n",
-       "      <td>27.0</td>\n",
+       "      <td>0.353818</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>315154</td>\n",
-       "      <td>8.6625</td>\n",
+       "      <td>0.016908</td>\n",
        "      <td>NaN</td>\n",
        "      <td>S</td>\n",
        "    </tr>\n",
@@ -504,11 +667,11 @@
        "      <th>896</th>\n",
        "      <td>3</td>\n",
        "      <td>female</td>\n",
-       "      <td>22.0</td>\n",
+       "      <td>0.287881</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>3101298</td>\n",
-       "      <td>12.2875</td>\n",
+       "      <td>0.023984</td>\n",
        "      <td>NaN</td>\n",
        "      <td>S</td>\n",
        "    </tr>\n",
@@ -517,13 +680,13 @@
        "</div>"
       ],
       "text/plain": [
-       "             Pclass     Sex   Age  SibSp  Parch   Ticket     Fare Cabin  \\\n",
-       "PassengerId                                                               \n",
-       "892               3    male  34.5      0      0   330911   7.8292   NaN   \n",
-       "893               3  female  47.0      1      0   363272   7.0000   NaN   \n",
-       "894               2    male  62.0      0      0   240276   9.6875   NaN   \n",
-       "895               3    male  27.0      0      0   315154   8.6625   NaN   \n",
-       "896               3  female  22.0      1      1  3101298  12.2875   NaN   \n",
+       "             Pclass     Sex       Age  SibSp  Parch   Ticket      Fare Cabin  \\\n",
+       "PassengerId                                                                    \n",
+       "892               3    male  0.452723      0      0   330911  0.015282   NaN   \n",
+       "893               3  female  0.617566      1      0   363272  0.013663   NaN   \n",
+       "894               2    male  0.815377      0      0   240276  0.018909   NaN   \n",
+       "895               3    male  0.353818      0      0   315154  0.016908   NaN   \n",
+       "896               3  female  0.287881      1      1  3101298  0.023984   NaN   \n",
        "\n",
        "            Embarked  \n",
        "PassengerId           \n",
@@ -534,7 +697,7 @@
        "896                S  "
       ]
      },
-     "execution_count": 42,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -544,12 +707,15 @@
     "df_test = df_test.drop('Name', axis = 1)\n",
     "for col in cat:\n",
     "    df_test[col] = pd.Categorical(df_test[col])\n",
+    "\n",
+    "for col in ['Age', 'Fare']:\n",
+    "    df_test[col] = ((df_test[col]) - df_test[col].min()) / (df_test[col].max() - df_test[col].min())\n",
     "df_test.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 59,
    "id": "3fb2ea4a-9ce5-414a-b02f-13a389376163",
    "metadata": {},
    "outputs": [],
@@ -559,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 60,
    "id": "f03f8f93-ceba-46de-a0b5-eebfed5cc85f",
    "metadata": {},
    "outputs": [],
@@ -569,7 +735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 61,
    "id": "36110e83-4904-4e0a-a59f-5a79874389c0",
    "metadata": {},
    "outputs": [
@@ -597,7 +763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 63,
    "id": "760f8eb4-2348-46b4-8c8c-4752dbcbe5e0",
    "metadata": {},
    "outputs": [
@@ -605,7 +771,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 2.77k/2.77k [00:00<00:00, 5.21kB/s]\n"
+      "100%|██████████| 2.77k/2.77k [00:00<00:00, 6.82kB/s]\n"
      ]
     },
     {
@@ -614,7 +780,7 @@
        "Successfully submitted to Titanic - Machine Learning from Disaster"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -622,7 +788,7 @@
    "source": [
     "# Submit to competition\n",
     "from kaggle import api\n",
-    "api.competition_submit_cli('subm.csv', 'autoML 120s - ver 2', comp)"
+    "api.competition_submit_cli('subm.csv', 'autoML 120s - normalized', comp)"
    ]
   },
   {
