--- a/2022-08-22-titanic-autoML.ipynb
+++ b/2022-08-22-titanic-autoML.ipynb
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 64,
    "id": "8d11be50-3bc4-4094-b05f-74bab51d7111",
    "metadata": {},
    "outputs": [],
@@ -453,15 +453,15 @@
     "\n",
     "import autosklearn.classification\n",
     "cls = autosklearn.classification.AutoSklearnClassifier(\n",
-    "    time_left_for_this_task = 120,\n",
-    "    per_run_time_limit = 30,\n",
+    "    time_left_for_this_task = 240,\n",
+    "    per_run_time_limit = 60,\n",
     "    memory_limit = None,\n",
     "    n_jobs = -1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 65,
    "id": "1af60bfa-ec80-4907-aa15-041a51231e23",
    "metadata": {},
    "outputs": [
@@ -479,7 +479,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ERROR] [2022-08-22 19:58:12,341:asyncio.events] \n",
+      "[ERROR] [2022-08-22 20:07:19,410:asyncio.events] \n",
       "Traceback (most recent call last):\n",
       "  File \"/root/mambaforge/lib/python3.9/site-packages/distributed/client.py\", line 1427, in _handle_report\n",
       "    msgs = await self.scheduler_comm.comm.read()\n",
@@ -510,11 +510,11 @@
     {
      "data": {
       "text/plain": [
-       "AutoSklearnClassifier(memory_limit=None, n_jobs=-1, per_run_time_limit=30,\n",
-       "                      time_left_for_this_task=120)"
+       "AutoSklearnClassifier(memory_limit=None, n_jobs=-1, per_run_time_limit=60,\n",
+       "                      time_left_for_this_task=240)"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 66,
    "id": "6ac2b310-07f1-488f-bafc-b57dc7d65546",
    "metadata": {},
    "outputs": [
@@ -535,28 +535,25 @@
      "text": [
       "          rank  ensemble_weight                 type      cost  duration\n",
       "model_id                                                                \n",
-      "7            1             0.04        liblinear_svc  0.189831  1.055646\n",
-      "30           2             0.04    gradient_boosting  0.189831  2.754151\n",
-      "29           3             0.08             adaboost  0.189831  2.603024\n",
-      "23           4             0.08             adaboost  0.193220  2.308492\n",
-      "10           5             0.02          extra_trees  0.193220  3.470677\n",
-      "4            6             0.02                  lda  0.200000  1.475597\n",
-      "17           7             0.02                  mlp  0.200000  3.083011\n",
-      "24           8             0.02             adaboost  0.200000  2.308952\n",
-      "31           9             0.02        random_forest  0.203390  2.158354\n",
-      "19          10             0.22             adaboost  0.203390  2.720817\n",
-      "28          11             0.12             adaboost  0.203390  1.023780\n",
-      "35          12             0.02                  qda  0.206780  1.110172\n",
-      "3           13             0.02             adaboost  0.210169  3.642195\n",
-      "16          14             0.02                  mlp  0.210169  7.383911\n",
-      "13          15             0.02        random_forest  0.210169  3.023449\n",
-      "43          16             0.06        random_forest  0.213559  2.116152\n",
-      "12          17             0.06    gradient_boosting  0.223729  2.755663\n",
-      "34          18             0.04        liblinear_svc  0.230508  0.978102\n",
-      "44          19             0.02          gaussian_nb  0.240678  1.055840\n",
-      "15          20             0.02  k_nearest_neighbors  0.247458  1.363104\n",
-      "41          21             0.02         bernoulli_nb  0.328814  1.016528\n",
-      "26          22             0.02                  sgd  0.376271  1.678024\n"
+      "33           1             0.02                  mlp  0.176271  4.140109\n",
+      "39           2             0.04   passive_aggressive  0.176271  1.114325\n",
+      "55           3             0.02                  mlp  0.176271  1.209011\n",
+      "56           4             0.04          extra_trees  0.179661  1.934459\n",
+      "72           5             0.02          extra_trees  0.183051  1.779294\n",
+      "68           6             0.42             adaboost  0.189831  1.719644\n",
+      "50           7             0.02        random_forest  0.193220  2.269418\n",
+      "23           8             0.06             adaboost  0.193220  2.300053\n",
+      "24           9             0.06             adaboost  0.200000  2.102787\n",
+      "73          10             0.02          extra_trees  0.200000  1.977286\n",
+      "19          11             0.06             adaboost  0.203390  2.681122\n",
+      "53          12             0.02          extra_trees  0.203390  2.224445\n",
+      "3           13             0.02             adaboost  0.210169  3.305413\n",
+      "45          14             0.02                  mlp  0.210169  2.439748\n",
+      "77          15             0.06          extra_trees  0.210169  1.859760\n",
+      "74          16             0.04        liblinear_svc  0.213559  1.403919\n",
+      "36          17             0.02        decision_tree  0.223729  0.947479\n",
+      "35          18             0.02  k_nearest_neighbors  0.223729  1.353935\n",
+      "67          19             0.02   passive_aggressive  0.230508  1.554203\n"
      ]
     }
    ],
@@ -566,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 67,
    "id": "01be7264-6c4c-47cd-a06e-6a50f99014e3",
    "metadata": {},
    "outputs": [
@@ -697,7 +694,7 @@
        "896                S  "
       ]
      },
-     "execution_count": 58,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -715,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 68,
    "id": "3fb2ea4a-9ce5-414a-b02f-13a389376163",
    "metadata": {},
    "outputs": [],
@@ -725,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 69,
    "id": "f03f8f93-ceba-46de-a0b5-eebfed5cc85f",
    "metadata": {},
    "outputs": [],
@@ -735,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 70,
    "id": "36110e83-4904-4e0a-a59f-5a79874389c0",
    "metadata": {},
    "outputs": [
@@ -763,7 +760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 71,
    "id": "760f8eb4-2348-46b4-8c8c-4752dbcbe5e0",
    "metadata": {},
    "outputs": [
@@ -771,7 +768,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 2.77k/2.77k [00:00<00:00, 6.82kB/s]\n"
+      "100%|██████████| 2.77k/2.77k [00:00<00:00, 4.79kB/s]\n"
      ]
     },
     {
@@ -780,7 +777,7 @@
        "Successfully submitted to Titanic - Machine Learning from Disaster"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -788,7 +785,7 @@
    "source": [
     "# Submit to competition\n",
     "from kaggle import api\n",
-    "api.competition_submit_cli('subm.csv', 'autoML 120s - normalized', comp)"
+    "api.competition_submit_cli('subm.csv', 'autoML 240s - normalized', comp)"
    ]
   },
   {
