print autoML statistics
sprint_statistics()

--- a/2022-08-22-titanic-autoML.ipynb
+++ b/2022-08-22-titanic-autoML.ipynb
@@ -525,6 +525,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "de6a731a-2a0b-4171-84a9-3baed326bef8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(cls.sprint_statistics())"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 66,
    "id": "6ac2b310-07f1-488f-bafc-b57dc7d65546",
    "metadata": {},
